--- a/src/sections/header.css
+++ b/src/sections/header.css
@@ -1,27 +1,53 @@
 #header {
     display: flex;
+    height: 100vh; 
 }
+
 #header > .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;  
 }
 
-#header .column {
+#header .col {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 #header .row {
-    margin-top: 2rem;
+    margin-top: 2vmin;
+    width: 100%;
     display: flex;
-    width: max-content;
+    justify-content: space-around;
+    flex-direction: column;
     gap: 2vmin;
-
 }
+
+
 
 #header img {
-    width: 60vmin;
+    height: 50vh;
 }
+
+#header .socials {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 50vmin;
+    justify-content: space-around;
+}
+
+#header svg {
+    transition: all 600ms ease;
+}
+
+#header svg:hover {
+    background-color: var(--color-light);
+    cursor: pointer;
+    color: var(--color-dark);
+    transform: rotate(16deg);
+    box-shadow: -3px -4px var(--color-primary);
+}
+
+
